nn interpretation revised

--- a/index.ipynb
+++ b/index.ipynb
@@ -837,11 +837,11 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Four models were trained to compare the results of of tuning and what happens when the model becomes overfited, the parameters were kept the same.\n",
+    "Four models were trained to compare the effects of tuning on model performance, particularly examining the phenomenon of overfitting. The parameters were kept consistent across all models.\n",
     "\n",
-    "The networks with <p style='color:#ED7261'>200 epoch</p> training show a better accuracy and loss for the classification in general, but it does not recognize very well what kind of transactions would be potentially dangerous, both classifying more than 65% of the frauds as legitimate transactions, so this would not catch most of the irregular behavior, but would be less likely to impeade a regular transaction from occuring.\n",
+    "The models trained with <span style='color:#ED7261'>200 epoch</span> show the better accuracy and loss for the classification in general, when compared to the other modelsHowever, these models struggled to accurately identify potentially fraudulent transactions, misclassifying over 65% of fraud cases as legitimate transactions. Consequently these models would fail to detect most of the irregular behavior, but would be less likely to impede regular transactions.\n",
     "\n",
-    "The networks with <p style='color:#ED7261'>500 epoch</p> training, with severe overfitting, show the best capability of detecting frauds, because it has very strongly assimilated and memorized the normal transaction patterns. Thus flagging more transactions as potentially dangerous, any outliers will be classified as fraud. Both networks had more than 50% of success of flagging a fraud when it shows, this came at the cost of flagging regular transactions that deviate from standard behaviour as fraud.\n",
+    "The models trained with <span style='color:#ED7261'>500 epoch</span>, with severe overfitting, had a superior capability of detecting frauds, because it has very strongly assimilated and memorized the normal transaction patterns. This resulted in more transactions being considered as potentially dangerous, the outliers in the database were classified as fraud. Both networks had more than 50% of success of flagging a fraud when it shows, this came at the cost of flagging regular transactions that deviate from standard behaviour as fraud.\n",
     "\n",
     " \n"
    ]
