--- a/index.ipynb
+++ b/index.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -45,7 +45,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [
     {
@@ -96,7 +96,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [
     {
@@ -148,7 +148,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [
     {
@@ -211,7 +211,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [
     {
@@ -261,7 +261,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [
     {
@@ -299,7 +299,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [
     {
@@ -333,7 +333,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [
     {
@@ -365,7 +365,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [
     {
@@ -411,7 +411,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [
     {
@@ -461,7 +461,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [
     {
@@ -520,7 +520,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [
     {
@@ -558,7 +558,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [
     {
@@ -627,7 +627,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [
     {
@@ -697,7 +697,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [
     {
@@ -767,7 +767,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 55,
    "metadata": {},
    "outputs": [
     {
@@ -824,6 +824,7 @@
     "print(\"Confusion Matrix:\")\n",
     "print(conf_matrix)\n",
     "\n",
+    "\n",
     "# Plotting RMS error per epoch\n",
     "plt.plot(np.sqrt(train_loss), label='Training Loss')\n",
     "plt.plot(np.sqrt(test_loss), label='Test Loss')\n",
@@ -851,7 +852,48 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 71,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[ True] True\n",
+      "[ True] False\n"
+     ]
+    }
+   ],
+   "source": [
+    "# print(X.head(1))\n",
+    "\n",
+    "sample_row = X.iloc[9] \n",
+    "sample_label = y.iloc[9] \n",
+    "\n",
+    "# print(sample_row)\n",
+    "# X_head_scaled = scaler.transform(X.head(12))\n",
+    "\n",
+    "original_sample_row =  scaler.inverse_transform(sample_row.values.reshape(1, -1))\n",
+    "recommendation = model.predict(original_sample_row)\n",
+    "\n",
+    "# print(y_pred)\n",
+    "print(recommendation, sample_label)\n",
+    "\n",
+    "\n",
+    "sample_row2 = X.iloc[1000] \n",
+    "sample_label2 = y.iloc[1000]\n",
+    "\n",
+    "original_sample_row2 =  scaler.inverse_transform(sample_row2.values.reshape(1, -1))\n",
+    "recommendation = model.predict(original_sample_row2)\n",
+    "\n",
+    "# print(y_pred)\n",
+    "print(recommendation, sample_label2)\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 56,
    "metadata": {},
    "outputs": [
     {
@@ -893,17 +935,15 @@
     }
    ],
    "source": [
-    "from sklearn.model_selection import train_test_split\n",
-    "from sklearn.preprocessing import StandardScaler\n",
     "from sklearn.linear_model import LogisticRegression\n",
     "from sklearn.metrics import classification_report\n",
     "\n",
     "# Model training\n",
-    "model = LogisticRegression()\n",
-    "model.fit(X_train, y_train)\n",
+    "regression_model = LogisticRegression()\n",
+    "regression_model.fit(X_train, y_train)\n",
     "\n",
-    "# Model evaluation\n",
-    "y_pred = model.predict(X_test)\n",
+    "# regression_model evaluation\n",
+    "y_pred = regression_model.predict(X_test)\n",
     "print(classification_report(y_test, y_pred))\n",
     "\n",
     "\n",
