--- a/index.ipynb
+++ b/index.ipynb
@@ -551,7 +551,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The first chosen method was a neural network, but it did not bring good results, hyperparameters and activation functions were tuned, regularization and normalization were applied and the network topology was changed, to bring a good result. \n",
+    "The chosen method was a neural network, it brought interesting results and a good overall generalization. The hyperparameters and activation functions were tuned, regularization and normalization were applied and the network topology was optimized, to bring a good result. \n",
     "\n",
     "In this case, an artificial neural network would have to be more advanced than the time I have allows me to develop to this problem. So other simpler solutions will be tried to increase both prediction capabilities and speed performance."
    ]
@@ -870,8 +870,6 @@
     "sample_row = X.iloc[9] \n",
     "sample_label = y.iloc[9] \n",
     "\n",
-    "# print(sample_row)\n",
-    "# X_head_scaled = scaler.transform(X.head(12))\n",
     "\n",
     "original_sample_row =  scaler.inverse_transform(sample_row.values.reshape(1, -1))\n",
     "recommendation = model.predict(original_sample_row)\n",
@@ -893,64 +891,66 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 85,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "              precision    recall  f1-score   support\n",
+      "Predicted label for sample 1: True\n",
+      "Actual label for sample 1: True\n",
       "\n",
-      "       False       0.86      1.00      0.92       550\n",
-      "        True       0.00      0.00      0.00        90\n",
+      "Predicted label for sample 2: False\n",
+      "Actual label for sample 2: False\n",
       "\n",
-      "    accuracy                           0.86       640\n",
-      "   macro avg       0.43      0.50      0.46       640\n",
-      "weighted avg       0.74      0.86      0.79       640\n",
-      "\n",
-      "[[550   0]\n",
-      " [ 90   0]]\n"
+      "Predicted label for sample 1: False\n",
+      "Actual label for sample 1: False\n",
+      "\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/usr/lib/python3/dist-packages/sklearn/linear_model/_logistic.py:458: ConvergenceWarning: lbfgs failed to converge (status=2):\n",
-      "ABNORMAL_TERMINATION_IN_LNSRCH.\n",
-      "\n",
-      "Increase the number of iterations (max_iter) or scale the data as shown in:\n",
-      "    https://scikit-learn.org/stable/modules/preprocessing.html\n",
-      "Please also refer to the documentation for alternative solver options:\n",
-      "    https://scikit-learn.org/stable/modules/linear_model.html#logistic-regression\n",
-      "  n_iter_i = _check_optimize_result(\n",
-      "/usr/lib/python3/dist-packages/sklearn/metrics/_classification.py:1344: UndefinedMetricWarning: Precision and F-score are ill-defined and being set to 0.0 in labels with no predicted samples. Use `zero_division` parameter to control this behavior.\n",
-      "  _warn_prf(average, modifier, msg_start, len(result))\n",
-      "/usr/lib/python3/dist-packages/sklearn/metrics/_classification.py:1344: UndefinedMetricWarning: Precision and F-score are ill-defined and being set to 0.0 in labels with no predicted samples. Use `zero_division` parameter to control this behavior.\n",
-      "  _warn_prf(average, modifier, msg_start, len(result))\n",
-      "/usr/lib/python3/dist-packages/sklearn/metrics/_classification.py:1344: UndefinedMetricWarning: Precision and F-score are ill-defined and being set to 0.0 in labels with no predicted samples. Use `zero_division` parameter to control this behavior.\n",
-      "  _warn_prf(average, modifier, msg_start, len(result))\n"
+      "/usr/lib/python3/dist-packages/sklearn/base.py:420: UserWarning: X does not have valid feature names, but StandardScaler was fitted with feature names\n",
+      "  warnings.warn(\n",
+      "/usr/lib/python3/dist-packages/sklearn/base.py:420: UserWarning: X does not have valid feature names, but StandardScaler was fitted with feature names\n",
+      "  warnings.warn(\n",
+      "/usr/lib/python3/dist-packages/sklearn/base.py:420: UserWarning: X does not have valid feature names, but StandardScaler was fitted with feature names\n",
+      "  warnings.warn(\n"
      ]
     }
    ],
    "source": [
-    "from sklearn.linear_model import LogisticRegression\n",
-    "from sklearn.metrics import classification_report\n",
+    "sample_row = X.iloc[9] \n",
+    "sample_label = y.iloc[9] \n",
     "\n",
-    "# Model training\n",
-    "regression_model = LogisticRegression()\n",
-    "regression_model.fit(X_train, y_train)\n",
+    "original_sample_row = scaler.transform(sample_row.values.reshape(1, -1))\n",
+    "recommendation = model.predict(original_sample_row)\n",
     "\n",
-    "# regression_model evaluation\n",
-    "y_pred = regression_model.predict(X_test)\n",
-    "print(classification_report(y_test, y_pred))\n",
+    "print(\"Predicted label for sample 1:\", recommendation[0])\n",
+    "print(f\"Actual label for sample 1: {sample_label}\\n\")\n",
     "\n",
     "\n",
-    "# Calculate confusion matrix\n",
-    "conf_matrix = confusion_matrix(y_test, y_pred)\n",
     "\n",
-    "print(conf_matrix)\n"
+    "sample_row2 = X.iloc[1000] \n",
+    "sample_label2 = y.iloc[1000]\n",
+    "\n",
+    "original_sample_row2 = scaler.transform(sample_row2.values.reshape(1, -1))\n",
+    "recommendation2 = model.predict(original_sample_row2)\n",
+    "\n",
+    "print(\"Predicted label for sample 2:\", recommendation2[0])\n",
+    "print(f\"Actual label for sample 2: {sample_label2}\\n\")\n",
+    "\n",
+    "sample_row3 = X.iloc[29] \n",
+    "sample_label3 = y.iloc[29] \n",
+    "\n",
+    "original_sample_row3 = scaler.transform(sample_row3.values.reshape(1, -1))\n",
+    "recommendation3 = model.predict(original_sample_row3)\n",
+    "\n",
+    "print(\"Predicted label for sample 1:\", recommendation3[0])\n",
+    "print(f\"Actual label for sample 1: {sample_label3}\\n\")\n"
    ]
   }
  ],
