--- a/index.ipynb
+++ b/index.ipynb
@@ -218,7 +218,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "From the correlation analysis, it is evident that most of the characteristics exhibit a weak correlation with the variable indicating fraudulent transactions, labeled as \"has_cbk\". \n",
+    "From the correlation analysis, it is evident that <span style='color:orange'>most of the characteristics exhibit a weak correlation with the variable indicating fraudulent transactions</span>, labeled as \"has_cbk\". \n",
     "\n",
     "The characteristics with stronger correlation are transaction id (that will not be analyzed, because it is unique to each transaction), transaction amount and transaction date that will be analyzed in the form of transaction_hour_minute, user id will also be analysed as a counterpart to card_id to determine if there are users utilizing multiple cards. Although merchant ID could potentially yield valuable recurrent data, it will not be explored for this project."
    ]
@@ -310,7 +310,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Upon analyzing the number of transactions by device ID and their corresponding fraud ratios, it becomes evident that when a device has more than 10 transactions, the likelihood of fraud is significantly high, approaching nearly 100% in all cases observed. However, when a device has fewer than 10 transactions registered, it is difficult to draw definitive conclusions beyond acknowledging the presence of frauds within this subset."
+    "Upon analyzing the number of transactions by device ID and their corresponding fraud ratios, it becomes evident that when a device has <span style='color:orange'>more than 10 transactions</span>, the likelihood of fraud is significantly high, approaching <span style='color:orange'>nearly 100%</span> in all cases observed. However, when a device has fewer than 10 transactions registered, it is difficult to draw definitive conclusions beyond acknowledging the presence of frauds within this subset."
    ]
   },
   {
@@ -420,7 +420,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "In the last two cells, we can see that there are 2925 cards on the database and 274 of those have registered fraudulent transactions. So there is no significant individual card history to be analyzed to track spending habits and do an individual card fraud analysis."
+    "In the last two cells, we can see that there are <span style='color:orange'>2925 cards</span> on the database and <span style='color:orange'>274 of those have registered fraudulent transactions</span>. So there is no significant individual card history to be analyzed to track spending habits and do an individual card fraud analysis."
    ]
   },
   {
@@ -458,7 +458,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "This graph shows us that the number of registered transactions is not particularly telling of fraud.  So it is necessary to find other methods that might help us find a pattern."
+    "This graph shows us that the number of registered transactions is <span style='color:chocolate'>not particularly telling of fraud</span>. But, it is noteworthy that as the device id data showed us, if more than 10 transactions are linked to the same entity, this migh be a strong sign of fraud. So it is necessary to find other methods that might help us find a pattern."
    ]
   },
   {
@@ -511,7 +511,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "This boxplot suggests that the transaction amount is typically higher on fraudulent interactions, but there are many outliers that also indicate that big amount transactions can also be legitimate. So one viable solution to reduce the amount of fraud would be a second factor autentication option for large transactions."
+    "The box plot and heatmap suggest that the transaction amount is typically higher in fraudulent interactions, but there are many outliers that also indicate big amount transactions can be legitimate. So, one viable solution to reduce the amount of fraud would be to raise suspicion of fraud on large amount transactions."
    ]
   },
   {
