--- a/index.ipynb
+++ b/index.ipynb
@@ -562,7 +562,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 165,
+   "execution_count": 183,
    "metadata": {},
    "outputs": [
     {
@@ -593,7 +593,9 @@
       "900     0.000000\n",
       "800     0.000000\n",
       "500     0.000000\n",
-      "Name: ratio, dtype: float64\n"
+      "Name: ratio, dtype: float64\n",
+      "Higher Ratio :\n",
+      "[600, 200, 2300, 2100, 0, 2200, 1900, 2000, 300, 100, 1700, 1600]\n"
      ]
     }
    ],
@@ -607,24 +609,8 @@
     "\n",
     "# print(ratio_data['ratio'])\n",
     "sorted_ratio_data = ratio_data.sort_values(by='ratio', ascending=False)\n",
-    "print(sorted_ratio_data['ratio'])\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 166,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Higher Ratio :\n",
-      "[600, 200, 2300, 2100, 0, 2200, 1900, 2000, 300, 100, 1700, 1600]\n"
-     ]
-    }
-   ],
-   "source": [
+    "print(sorted_ratio_data['ratio'])\n",
+    "\n",
     "# Identify consecutive intervals with ratios above the threshold\n",
     "threshold = 0.10\n",
     "higher_ratio_clusters = []\n",
