antifraud spam and amount detection

--- a/index.ipynb
+++ b/index.ipynb
@@ -1042,21 +1042,40 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 93,
+   "execution_count": 109,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# function to return in a text if a transaction is approved or rejected\n",
+    "def approve(bool):\n",
+    "    if bool==False:\n",
+    "        return ('approve')\n",
+    "    return ('reject')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 114,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Predicted label for sample 1: True\n",
-      "Actual label for sample 1: True\n",
+      "sample 1:\n",
+      "transaction_id: 21320407\n",
+      "Predicted label for sample 1:reject\n",
+      "Expected result: reject\n",
       "\n",
-      "Predicted label for sample 2: False\n",
-      "Actual label for sample 2: False\n",
+      "sample 2:\n",
+      "transaction_id: 21321398\n",
+      "Predicted label for sample 1:approve\n",
+      "Expected result: approve\n",
       "\n",
-      "Predicted label for sample 1: False\n",
-      "Actual label for sample 1: False\n",
+      "sample 3:\n",
+      "transaction_id: 21320427\n",
+      "Predicted label for sample 1:approve\n",
+      "Expected result: approve\n",
       "\n"
      ]
     },
@@ -1075,33 +1094,147 @@
    ],
    "source": [
     "sample_row = X.iloc[9] \n",
-    "sample_label = y.iloc[9] \n",
+    "sample_label = approve(y.iloc[9])\n",
     "\n",
     "original_sample_row = scaler.transform(sample_row.values.reshape(1, -1))\n",
-    "recommendation = model.predict(original_sample_row)\n",
+    "transaction_id = sample_row['transaction_id'] \n",
+    "recommendation = approve(model.predict(original_sample_row)[0])\n",
     "\n",
-    "print(\"Predicted label for sample 1:\", recommendation[0])\n",
-    "print(f\"Actual label for sample 1: {sample_label}\\n\")\n",
+    "print(f\"sample 1:\\ntransaction_id: {int(transaction_id)}\\nPredicted label for sample 1:{recommendation}\\nExpected result: {sample_label}\\n\")\n",
     "\n",
     "\n",
     "\n",
     "sample_row2 = X.iloc[1000] \n",
-    "sample_label2 = y.iloc[1000]\n",
+    "sample_label2 = approve(y.iloc[1000])\n",
     "\n",
+    "transaction_id2 = sample_row2['transaction_id'] \n",
     "original_sample_row2 = scaler.transform(sample_row2.values.reshape(1, -1))\n",
-    "recommendation2 = model.predict(original_sample_row2)\n",
+    "recommendation2 =  approve(model.predict(original_sample_row2)[0])\n",
     "\n",
-    "print(\"Predicted label for sample 2:\", recommendation2[0])\n",
-    "print(f\"Actual label for sample 2: {sample_label2}\\n\")\n",
+    "print(f\"sample 2:\\ntransaction_id: {int(transaction_id2)}\\nPredicted label for sample 1:{recommendation2}\\nExpected result: {sample_label2}\\n\")\n",
+    "\n",
     "\n",
     "sample_row3 = X.iloc[29] \n",
-    "sample_label3 = y.iloc[29] \n",
+    "sample_label3 = approve(y.iloc[29])\n",
+    "transaction_id3 = sample_row3['transaction_id'] \n",
     "\n",
     "original_sample_row3 = scaler.transform(sample_row3.values.reshape(1, -1))\n",
-    "recommendation3 = model.predict(original_sample_row3)\n",
+    "recommendation3 =  approve(model.predict(original_sample_row3)[0])\n",
     "\n",
-    "print(\"Predicted label for sample 1:\", recommendation3[0])\n",
-    "print(f\"Actual label for sample 1: {sample_label3}\\n\")\n"
+    "\n",
+    "print(f\"sample 3:\\ntransaction_id: {int(transaction_id3)}\\nPredicted label for sample 1:{recommendation3}\\nExpected result: {sample_label3}\\n\")\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<h4 style='color:orange'>Realistic use</h4>\n",
+    "\n",
+    "I was not able to find a false negative to test a rule based system, but I will showcase a Rule based system following the requirements, in the form of what an actual system could look like. \n",
+    "\n",
+    "For the sake of simplicity and readability, the data wont be passing through the treatment again, but in the real application this would be necessary."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "The next Cell contains the antifraud requirements stated in this test's documentation with a brief explanation to the criteria used to determine the logic in the commented code"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 145,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# first we are gonna create a function to test if a device or user has too many transactions\n",
+    "# If the device or user has 10 or more transactions it will be automatically blocked\n",
+    "# this function will also detect if there was any fraud in the past\n",
+    "\n",
+    "def detect_spam(device_id, user_id):\n",
+    "    # This filtering can be adjusted to a certain amount of transactions in the  registry \n",
+    "    # We can roughly estimate time based on the amount of transactions \n",
+    "    device_id_filter = dataset['device_id'].head(3199) == device_id\n",
+    "    device_id_entries = dataset[device_id_filter]\n",
+    "    user_id_filter = dataset['user_id'].head(3199) == user_id\n",
+    "    user_id_entries = dataset[user_id_filter]\n",
+    "\n",
+    "    # verify if there is any fraud in history\n",
+    "    has_cbk_in_entries = any(device_id_entries['has_cbk']) or any(user_id_entries['has_cbk'])\n",
+    "\n",
+    "    if(device_id == 0):\n",
+    "        return False\n",
+    "      \n",
+    "    if(has_cbk_in_entries or len(device_id_entries) >= 10 or len(user_id_entries) >=10):\n",
+    "        return True\n",
+    "    \n",
+    "    return False\n",
+    "\n",
+    "# Next we are gonna test if the transaction will surpass the time and amount threshold\n",
+    "def detect_large_amount_scam(time, amount):\n",
+    "    # the time out of business hours have over 13% of frauds, for this reason\n",
+    "    # large transactions out of business hours will be flagged as fraud \n",
+    "    if(time<600 or time>1800):\n",
+    "    #The amount chosen was 1700, because above 1700, more than 30% of the transactions were fraud\n",
+    "        if(amount>1700):\n",
+    "            return True\n",
+    "    return False\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 146,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2303.0 691.03\n",
+      "False\n",
+      "\n",
+      "transaction_id: 21321180\n",
+      "Predicted label for sample 1:reject\n",
+      "Expected result: reject\n",
+      "\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/usr/lib/python3/dist-packages/sklearn/base.py:420: UserWarning: X does not have valid feature names, but StandardScaler was fitted with feature names\n",
+      "  warnings.warn(\n"
+     ]
+    }
+   ],
+   "source": [
+    "\n",
+    "sample_row = X.iloc[782] \n",
+    "sample_label = approve(y.iloc[782])\n",
+    "\n",
+    "original_sample_row = scaler.transform(sample_row.values.reshape(1, -1))\n",
+    "transaction_id = sample_row['transaction_id'] \n",
+    "device_id = sample_row['device_id']\n",
+    "user_id = sample_row['user_id'] \n",
+    "amount = sample_row['transaction_amount'] \n",
+    "time = sample_row['transaction_hour_minute'] \n",
+    "\n",
+    "\n",
+    "is_spam = detect_spam(device_id, user_id)\n",
+    "print\n",
+    "recommendation = approve(model.predict(original_sample_row)[0])\n",
+    "\n",
+    "print(time, amount)\n",
+    "print(detect_large_amount_scam(time, amount))\n",
+    "\n",
+    "print(f\"\\ntransaction_id: {int(transaction_id)}\\nPredicted label for sample 1:{recommendation}\\nExpected result: {sample_label}\\n\")\n",
+    "\n",
+    "top_10_device_ids = dataset['user_id'].value_counts().head(10)"
    ]
   }
  ],
