--- a/index.ipynb
+++ b/index.ipynb
@@ -1187,19 +1187,48 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 146,
+   "execution_count": 162,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def test_fraud(transaction):\n",
+    "    transaction_id = sample_row['transaction_id'] \n",
+    "    device_id = sample_row['device_id']\n",
+    "    user_id = sample_row['user_id'] \n",
+    "    amount = sample_row['transaction_amount'] \n",
+    "    time = sample_row['transaction_hour_minute'] \n",
+    "\n",
+    "\n",
+    "    is_large_and_late = detect_large_amount_scam(time, amount)\n",
+    "    if(is_large_and_late):\n",
+    "        return ( [int(transaction_id), 'reject', 'This amount cannot be traded out of business hours'])\n",
+    "\n",
+    "    # the scaler has to be properly set, otherwise the model wil no be able to predict the label \n",
+    "    original_sample_row = scaler.transform(transaction.values.reshape(1, -1))\n",
+    "    recommendation = model.predict(original_sample_row)[0]\n",
+    "    \n",
+    "    if(recommendation):\n",
+    "         return return ( [int(transaction_id), 'reject', 'Our system has detected suspicious activity'])\n",
+    "    \n",
+    "    is_spam = detect_spam(device_id, user_id)\n",
+    "\n",
+    "    if(is_spam):\n",
+    "            return ( [int(transaction_id), 'reject', 'User has done too many transactions in a short time'])\n",
+    "    \n",
+    "    return ( [int(transaction_id), 'reject', 'Transaction successful'])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 165,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "2303.0 691.03\n",
-      "False\n",
-      "\n",
       "transaction_id: 21321180\n",
       "Predicted label for sample 1:reject\n",
-      "Expected result: reject\n",
       "\n"
      ]
     },
@@ -1213,28 +1242,13 @@
     }
    ],
    "source": [
-    "\n",
+    "# this transaction was chosen because it has spam in it\n",
     "sample_row = X.iloc[782] \n",
     "sample_label = approve(y.iloc[782])\n",
     "\n",
-    "original_sample_row = scaler.transform(sample_row.values.reshape(1, -1))\n",
-    "transaction_id = sample_row['transaction_id'] \n",
-    "device_id = sample_row['device_id']\n",
-    "user_id = sample_row['user_id'] \n",
-    "amount = sample_row['transaction_amount'] \n",
-    "time = sample_row['transaction_hour_minute'] \n",
+    "test_sample1 = test_fraud(sample_row)\n",
     "\n",
-    "\n",
-    "is_spam = detect_spam(device_id, user_id)\n",
-    "print\n",
-    "recommendation = approve(model.predict(original_sample_row)[0])\n",
-    "\n",
-    "print(time, amount)\n",
-    "print(detect_large_amount_scam(time, amount))\n",
-    "\n",
-    "print(f\"\\ntransaction_id: {int(transaction_id)}\\nPredicted label for sample 1:{recommendation}\\nExpected result: {sample_label}\\n\")\n",
-    "\n",
-    "top_10_device_ids = dataset['user_id'].value_counts().head(10)"
+    "print(f\"transaction_id: {int(test_sample1[0])}\\nPredicted label for sample 1:{test_sample1[1]}\\n\")"
    ]
   }
  ],
