--- a/index.ipynb
+++ b/index.ipynb
@@ -1034,7 +1034,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<h3 style='color:orange'>Practical application</h3>\n",
+    "<h2 style='color:orange'>Practical application</h2>\n",
     "Now we are gonna take the trained model and apply it to a more realistic use case. Some of the data points on the dataset will be taken to test and show the workings of this system.\n",
     "\n",
     "And then apply the asked for rules in the documentation for this test."
@@ -1146,7 +1146,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 145,
+   "execution_count": 217,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1155,8 +1155,9 @@
     "# this function will also detect if there was any fraud in the past\n",
     "\n",
     "def detect_spam(device_id, user_id):\n",
-    "    # This filtering can be adjusted to a certain amount of transactions in the  registry \n",
-    "    # We can roughly estimate time based on the amount of transactions \n",
+    "    # This filtering can be adjusted to a certain last x amount of transactions in the registry \n",
+    "    # We can roughly estimate time based on the amount of transactions pulled from the database\n",
+    "    # if we know the amount of transactions per hour or minute\n",
     "    device_id_filter = dataset['device_id'].head(3199) == device_id\n",
     "    device_id_entries = dataset[device_id_filter]\n",
     "    user_id_filter = dataset['user_id'].head(3199) == user_id\n",
@@ -1165,10 +1166,10 @@
     "    # verify if there is any fraud in history\n",
     "    has_cbk_in_entries = any(device_id_entries['has_cbk']) or any(user_id_entries['has_cbk'])\n",
     "\n",
+    "      \n",
     "    if(device_id == 0):\n",
     "        return False\n",
-    "      \n",
-    "    if(has_cbk_in_entries or len(device_id_entries) >= 10 or len(user_id_entries) >=10):\n",
+    "    elif(has_cbk_in_entries or len(device_id_entries) >= 10 or len(user_id_entries) >=10):\n",
     "        return True\n",
     "    \n",
     "    return False\n",
@@ -1186,8 +1187,15 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "The next cell contains a function that will receive a transaction and test it for the rules mandated in the documentation and apply the trained model, <span style='color:orange'>the sequence of the application was chosen by fastest to potentially slowest</span>. The spam detection test, which involves querying a database and thus consumes time proportional to the number of rows checked, is positioned as the slowest test. Meanwhile, the model application sits in the middle in terms of speed, as it is pre-trained and executes basic functions. Finally, the time and amount testing is the fastest, as it simply checks for specific conditions."
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 162,
+   "execution_count": 218,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1201,26 +1209,34 @@
     "\n",
     "    is_large_and_late = detect_large_amount_scam(time, amount)\n",
     "    if(is_large_and_late):\n",
-    "        return ( [int(transaction_id), 'reject', 'This amount cannot be traded out of business hours'])\n",
+    "        return ( [int(transaction_id), 'reject', 'Reason: This amount cannot be traded out of business hours.'])\n",
     "\n",
+    "    \n",
     "    # the scaler has to be properly set, otherwise the model wil no be able to predict the label \n",
     "    original_sample_row = scaler.transform(transaction.values.reshape(1, -1))\n",
     "    recommendation = model.predict(original_sample_row)[0]\n",
-    "    \n",
     "    if(recommendation):\n",
-    "         return return ( [int(transaction_id), 'reject', 'Our system has detected suspicious activity'])\n",
+    "         return( [int(transaction_id), 'reject', 'Reason: Our AI system has detected suspicious activity.'])\n",
     "    \n",
     "    is_spam = detect_spam(device_id, user_id)\n",
     "\n",
     "    if(is_spam):\n",
-    "            return ( [int(transaction_id), 'reject', 'User has done too many transactions in a short time'])\n",
+    "            return ( [int(transaction_id), 'reject', 'Reason: User has done too many transactions in a short period.'])\n",
     "    \n",
-    "    return ( [int(transaction_id), 'reject', 'Transaction successful'])"
+    "    return ( [int(transaction_id), 'accept', 'Transaction successful'])"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<h4 style='color:goldenrod'>Testing the implementation</h4>\n",
+    "Here we have some samples of possible outcomes, bur not every possible outcome is represented in the provided samples."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 165,
+   "execution_count": 221,
    "metadata": {},
    "outputs": [
     {
@@ -1228,7 +1244,19 @@
      "output_type": "stream",
      "text": [
       "transaction_id: 21321180\n",
-      "Predicted label for sample 1:reject\n",
+      "This should be:reject\n",
+      "Model + rules Recommendation: reject\n",
+      "Reason: Our AI system has detected suspicious activity.\n",
+      "\n",
+      "transaction_id: 21320398\n",
+      "This should be:approve\n",
+      "Model + rules Recommendation: accept\n",
+      "Transaction successful\n",
+      "\n",
+      "transaction_id: 21320454\n",
+      "This should be:reject\n",
+      "Model + rules Recommendation: reject\n",
+      "Reason: User has done too many transactions in a short period.\n",
       "\n"
      ]
     },
@@ -1237,18 +1265,43 @@
      "output_type": "stream",
      "text": [
       "/usr/lib/python3/dist-packages/sklearn/base.py:420: UserWarning: X does not have valid feature names, but StandardScaler was fitted with feature names\n",
+      "  warnings.warn(\n",
+      "/usr/lib/python3/dist-packages/sklearn/base.py:420: UserWarning: X does not have valid feature names, but StandardScaler was fitted with feature names\n",
+      "  warnings.warn(\n",
+      "/usr/lib/python3/dist-packages/sklearn/base.py:420: UserWarning: X does not have valid feature names, but StandardScaler was fitted with feature names\n",
       "  warnings.warn(\n"
      ]
     }
    ],
    "source": [
-    "# this transaction was chosen because it has spam in it\n",
     "sample_row = X.iloc[782] \n",
     "sample_label = approve(y.iloc[782])\n",
     "\n",
     "test_sample1 = test_fraud(sample_row)\n",
     "\n",
-    "print(f\"transaction_id: {int(test_sample1[0])}\\nPredicted label for sample 1:{test_sample1[1]}\\n\")"
+    "print(f\"transaction_id: {int(test_sample1[0])}\\nThis should be:{sample_label}\\nModel + rules Recommendation: {test_sample1[1]}\\n{test_sample1[2]}\\n\")\n",
+    "\n",
+    "sample_row = X.iloc[0] \n",
+    "sample_label = approve(y.iloc[0])\n",
+    "\n",
+    "test_sample2 = test_fraud(sample_row)\n",
+    "\n",
+    "print(f\"transaction_id: {int(test_sample2[0])}\\nThis should be:{sample_label}\\nModel + rules Recommendation: {test_sample2[1]}\\n{test_sample2[2]}\\n\")\n",
+    "\n",
+    "# This transaction was chosen because it has spam in it but would be a false negative by the trained model\n",
+    "sample_row = X.iloc[56] \n",
+    "sample_label = approve(y.iloc[56])\n",
+    "\n",
+    "test_sample3 = test_fraud(sample_row)\n",
+    "\n",
+    "print(f\"transaction_id: {int(test_sample3[0])}\\nThis should be:{sample_label}\\nModel + rules Recommendation: {test_sample3[1]}\\n{test_sample3[2]}\\n\")\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<h2 style='color: orange'>Final results<h2>"
    ]
   }
  ],
