--- a/index.ipynb
+++ b/index.ipynb
@@ -1236,7 +1236,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 221,
+   "execution_count": 223,
    "metadata": {},
    "outputs": [
     {
@@ -1254,6 +1254,11 @@
       "Transaction successful\n",
       "\n",
       "transaction_id: 21320454\n",
+      "This should be:reject\n",
+      "Model + rules Recommendation: reject\n",
+      "Reason: User has done too many transactions in a short period.\n",
+      "\n",
+      "transaction_id: 21320424\n",
       "This should be:reject\n",
       "Model + rules Recommendation: reject\n",
       "Reason: User has done too many transactions in a short period.\n",
@@ -1294,14 +1299,48 @@
     "\n",
     "test_sample3 = test_fraud(sample_row)\n",
     "\n",
-    "print(f\"transaction_id: {int(test_sample3[0])}\\nThis should be:{sample_label}\\nModel + rules Recommendation: {test_sample3[1]}\\n{test_sample3[2]}\\n\")\n"
+    "print(f\"transaction_id: {int(test_sample3[0])}\\nThis should be:{sample_label}\\nModel + rules Recommendation: {test_sample3[1]}\\n{test_sample3[2]}\\n\")\n",
+    "\n",
+    "\n",
+    "# This transaction was chosen because it has spam in it but would be a false negative by the trained model\n",
+    "sample_row = X.iloc[26] \n",
+    "sample_label = approve(y.iloc[26])\n",
+    "\n",
+    "test_sample4 = test_fraud(sample_row)\n",
+    "\n",
+    "print(f\"transaction_id: {int(test_sample4[0])}\\nThis should be:{sample_label}\\nModel + rules Recommendation: {test_sample4[1]}\\n{test_sample3[2]}\\n\")"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<h2 style='color: orange'>Final results<h2>"
+    "<h3 style='color: orange'>results:</h3>\n",
+    "The implementation of extra rules was able to improve the result over the model performance alone. In the examples above. Here is interpretation for the results.\n",
+    "<ul>\n",
+    "<li>\n",
+    "One of the false negatives of the model was corrected by the slower spam rule\n",
+    "</li>\n",
+    "<li>\n",
+    "One was rejected by the trained model, saving time on the spam checkup\n",
+    "</li>\n",
+    "<li>\n",
+    "One was rejected for being a large transaction amount out of business hours (our determined risk factor for fraud) \n",
+    "</li>\n",
+    "<li>\n",
+    "One was approved, to validate if the system would pass for typical behavior</li>\n",
+    "</ul>\n",
+    "\n",
+    "This results show that the applied rules bring more safety for the user and the company at the expanse of more inconvenience in the form of more rejected transactions and overall slower processing time.\n",
+    "\n",
+    "It is very important to note that if the data being consulted for spam is <span style='color:orange'>stored in ram instead of HDDs or SSDs, this would significantly decrease latency</span> and transaction approval time. (A tool that could help with this would be redis)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<h1 style='color:#ED7261'>CONCLUSION</h1>\n"
    ]
   }
  ],
