--- a/index.ipynb
+++ b/index.ipynb
@@ -7,7 +7,9 @@
     "<h2 style='color:#50E15F'>Teste técnico - Risk Analyst Cloudwalk.</h2>\n",
     "<h2>\n",
     "Candidate: Vinícius S. Brandão\n",
-    "</h2>\n"
+    "</h2>\n",
+    "\n",
+    "*This project was developed to tackle the requirements on the pdf version of the challenge, some of the github's requirements were addressed, but they were largely an afterthought, tackling both would be too complex for the span of a week. For this reason, this project will not work with payloads, it will merely emulate this on the [Testing implementation section](#implementation)*\n"
    ]
   },
   {
@@ -47,7 +49,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": 250,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -68,7 +70,7 @@
    "source": [
     "After importing the necessary libraries, it is crucial to import and sanitize the data, extracting the maximum amount of useful information from the dataset.\n",
     "\n",
-    "Before proceeding with the solutions to tasks 3.2.1 and 3.3, I will address task 3.2.2:\n",
+    "Before proceeding with the solutions to tasks 3.1, 3.3 and 3.4 (from the pdf), I will address task 3.2:\n",
     "\n",
     "    Location data holds significant value in fraud detection, as it can be cross-referenced with historical location data to identify suspicious activities. (The following suggestion is based on the data analysis done below). Establishing a comprehensive historical context for each user, particularly when users are identified by card or device ID, is also useful. Without sufficient transactional context attributed to each user, there may be limitations in gathering transactional data, hindering our ability to establish a comparative framework for identifying normal transactions associated with each card."
    ]
@@ -77,7 +79,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<h3>First step</h3>\n",
+    "<h3>Project Setup</h3>\n",
     "\n",
     "The first thing to be done is trying to pull out useful data from the dataset before procceding to model creation or other solution implementation.\n",
     "\n",
@@ -86,7 +88,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": 251,
    "metadata": {},
    "outputs": [
     {
@@ -130,7 +132,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": 252,
    "metadata": {},
    "outputs": [
     {
@@ -184,7 +186,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<h3>Second Step</h3>\n",
+    "<h3 id='#analysis'>Data analysis</h3>\n",
     "In the next step, we aim to further investigate the patterns in our dataset, using any analythical tools that could provide valuable insight for our application.\n",
     "\n",
     "First a confusion matrix will be enployed to allow us to estimate what are the most important features to be analyzed. This will be started by grouping transactions with common traits and analyzing how the traits relate to each other."
@@ -192,7 +194,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 74,
+   "execution_count": 253,
    "metadata": {},
    "outputs": [
     {
@@ -255,7 +257,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 75,
+   "execution_count": 254,
    "metadata": {},
    "outputs": [
     {
@@ -331,7 +333,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 76,
+   "execution_count": 255,
    "metadata": {},
    "outputs": [
     {
@@ -391,7 +393,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 77,
+   "execution_count": 256,
    "metadata": {},
    "outputs": [
     {
@@ -441,7 +443,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 78,
+   "execution_count": 257,
    "metadata": {},
    "outputs": [
     {
@@ -486,7 +488,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 79,
+   "execution_count": 258,
    "metadata": {},
    "outputs": [
     {
@@ -553,7 +555,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 80,
+   "execution_count": 259,
    "metadata": {},
    "outputs": [
     {
@@ -629,7 +631,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 81,
+   "execution_count": 260,
    "metadata": {},
    "outputs": [
     {
@@ -719,7 +721,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 92,
+   "execution_count": 261,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -738,7 +740,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 83,
+   "execution_count": 262,
    "metadata": {},
    "outputs": [
     {
@@ -807,7 +809,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 84,
+   "execution_count": 263,
    "metadata": {},
    "outputs": [
     {
@@ -877,7 +879,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 85,
+   "execution_count": 264,
    "metadata": {},
    "outputs": [
     {
@@ -947,7 +949,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 86,
+   "execution_count": 265,
    "metadata": {},
    "outputs": [
     {
@@ -1042,7 +1044,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 109,
+   "execution_count": 266,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1055,7 +1057,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 114,
+   "execution_count": 267,
    "metadata": {},
    "outputs": [
     {
@@ -1146,7 +1148,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 217,
+   "execution_count": 268,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1195,7 +1197,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 218,
+   "execution_count": 279,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1223,42 +1225,44 @@
     "    if(is_spam):\n",
     "            return ( [int(transaction_id), 'reject', 'Reason: User has done too many transactions in a short period.'])\n",
     "    \n",
-    "    return ( [int(transaction_id), 'accept', 'Transaction successful'])"
+    "    return ( [int(transaction_id), 'approve', 'Transaction successful'])"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<h4 style='color:goldenrod'>Testing the implementation</h4>\n",
-    "Here we have some samples of possible outcomes, bur not every possible outcome is represented in the provided samples."
+    "<h4 id='implementation' style='color:goldenrod'>Testing the implementation</h4>\n",
+    "Here we have some samples of possible outcomes, bur not every possible outcome is represented in the provided samples.\n",
+    "\n",
+    "The output is done in a semantic manner to better understand what happened to each test."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 223,
+   "execution_count": 290,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "transaction_id: 21320398\n",
+      "This should be:approve\n",
+      "Model + rules Recommendation: approve\n",
+      "Transaction successful\n",
+      "\n",
       "transaction_id: 21321180\n",
       "This should be:reject\n",
       "Model + rules Recommendation: reject\n",
       "Reason: Our AI system has detected suspicious activity.\n",
       "\n",
-      "transaction_id: 21320398\n",
-      "This should be:approve\n",
-      "Model + rules Recommendation: accept\n",
-      "Transaction successful\n",
-      "\n",
-      "transaction_id: 21320454\n",
+      "transaction_id: 21320401\n",
       "This should be:reject\n",
       "Model + rules Recommendation: reject\n",
-      "Reason: User has done too many transactions in a short period.\n",
+      "Reason: This amount cannot be traded out of business hours.\n",
       "\n",
-      "transaction_id: 21320424\n",
+      "transaction_id: 21320454\n",
       "This should be:reject\n",
       "Model + rules Recommendation: reject\n",
       "Reason: User has done too many transactions in a short period.\n",
@@ -1279,23 +1283,23 @@
     }
    ],
    "source": [
-    "sample_row = X.iloc[782] \n",
-    "sample_label = approve(y.iloc[782])\n",
+    "sample_row = X.iloc[0] \n",
+    "sample_label = approve(y.iloc[0])\n",
     "\n",
     "test_sample1 = test_fraud(sample_row)\n",
     "\n",
     "print(f\"transaction_id: {int(test_sample1[0])}\\nThis should be:{sample_label}\\nModel + rules Recommendation: {test_sample1[1]}\\n{test_sample1[2]}\\n\")\n",
     "\n",
-    "sample_row = X.iloc[0] \n",
-    "sample_label = approve(y.iloc[0])\n",
+    "sample_row = X.iloc[782] \n",
+    "sample_label = approve(y.iloc[782])\n",
     "\n",
     "test_sample2 = test_fraud(sample_row)\n",
     "\n",
     "print(f\"transaction_id: {int(test_sample2[0])}\\nThis should be:{sample_label}\\nModel + rules Recommendation: {test_sample2[1]}\\n{test_sample2[2]}\\n\")\n",
     "\n",
     "# This transaction was chosen because it has spam in it but would be a false negative by the trained model\n",
-    "sample_row = X.iloc[56] \n",
-    "sample_label = approve(y.iloc[56])\n",
+    "sample_row = X.iloc[3] \n",
+    "sample_label = approve(y.iloc[3])\n",
     "\n",
     "test_sample3 = test_fraud(sample_row)\n",
     "\n",
@@ -1303,12 +1307,12 @@
     "\n",
     "\n",
     "# This transaction was chosen because it has spam in it but would be a false negative by the trained model\n",
-    "sample_row = X.iloc[26] \n",
-    "sample_label = approve(y.iloc[26])\n",
+    "sample_row = X.iloc[56] \n",
+    "sample_label = approve(y.iloc[56])\n",
     "\n",
     "test_sample4 = test_fraud(sample_row)\n",
     "\n",
-    "print(f\"transaction_id: {int(test_sample4[0])}\\nThis should be:{sample_label}\\nModel + rules Recommendation: {test_sample4[1]}\\n{test_sample3[2]}\\n\")"
+    "print(f\"transaction_id: {int(test_sample4[0])}\\nThis should be:{sample_label}\\nModel + rules Recommendation: {test_sample4[1]}\\n{test_sample4[2]}\\n\")"
    ]
   },
   {
@@ -1341,6 +1345,18 @@
    "metadata": {},
    "source": [
     "<h1 style='color:#ED7261'>CONCLUSION</h1>\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "The aim of this project was to solve item 3 of the Risk Analyst I - Case challenge. The questions were answered during this entire notebook but some of them will be condensed here.\n",
+    "\n",
+    "1. Analyze the data provided and present your conclusions. What suspicious behaviors did\n",
+    "you find? What led you to this conclusion? What actions would you take?\n",
+    "\n",
+    "The data analysis leads us to believe that transactions happening between 4pm and 6 am are the most likely to be fraudulent when combined with a large transaction amount (larger than 2000), as well as multiple (surpassing 10) transactions on the same device or by the same user. This was explored in the [Data Analysis section](#analysis) by studying the graphs and tables that presented a larger frequency of fraud when these factors were present.\n"
    ]
   }
  ],
